import "BasicUser.proto";

package proto;

option java_package = "com.lvl6.pictures.noneventprotos";
option java_outer_classname = "UserProto";

message CompleteUserProto {
	optional string userId = 1;
	optional string facebookId = 2;
	optional string nameStrangersSee = 3;
	optional string	nameFriendsSee = 4;
	optional string email = 5;
	optional int64 lastLogin = 6;
	optional int32 signupDate = 7;
	optional BasicAuthorizedDevice basicAuthorizedDevice = 8;
	
	//power up information, tokens/rubies/in game currency
}
