import "TriviaQuestionFormat.proto";

package proto;

option java_package = "com.lvl6.pictures.noneventprotos";
option java_outer_classname = "TriviaRoundFormatProto";


message BasicRoundResultsProto {
	optional int32 numQuestionsSeen = 1;
	optional int32 numQuestionsAnsweredCorrectly = 2;
	optional int32 score = 3;
	optional int32 roundNumber = 4;

}

message CompleteRoundResultsProto {
	optional int32 numQuestionsSeen = 1;
	optional int32 numQuestionsAnsweredCorrectly = 2;
	optional int32 score = 3;
	optional int32 roundNumber = 4;
	repeated QuestionProto questions = 5;
}